--- a/05-Optimizing-Retrieval/05-Optimizing-Retrieval.ipynb
+++ b/05-Optimizing-Retrieval/05-Optimizing-Retrieval.ipynb
@@ -32,9 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'azure'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mazure\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcredentials\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AzureKeyCredential\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mazure\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01midentity\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DefaultAzureCredential\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'azure'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from azure.core.credentials import AzureKeyCredential\n",
@@ -514,6 +526,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Semantic configuration name should be the name of your index + \"-semantic-configuration\" --> if you run into an error, verify the name of your semantic configuration\n",
+    "semantic_configuration_name=index_name + \"-semantic-configuration\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -524,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +574,7 @@
     "    top=5,\n",
     "    select=[\"title\", \"chunk\"],\n",
     "    query_type=\"semantic\",\n",
-    "    semantic_configuration_name=\"ragtime2-semantic-configuration\"\n",
+    "    semantic_configuration_name=semantic_configuration_name\n",
     ")\n",
     "\n",
     "display_results(results)"
@@ -564,12 +586,15 @@
    "source": [
     "#### Hybrid Search + Semantic Ranker + Query Rewriting\n",
     "\n",
-    "Use semantic ranking and query rewriting for improved relevance:"
+    "Use semantic ranking and query rewriting for improved relevance.\n",
+    "\n",
+    "**Note**: Currently, query rewriting is in public preview stage and only available in a search service, Basic tier or higher, in **North Europe** or **Southeast Asia**.\n",
+    "More Info [here](https://learn.microsoft.com/en-us/azure/search/semantic-how-to-query-rewrite)!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -604,18 +629,18 @@
     }
    ],
    "source": [
-    "results = search_client.search(\n",
-    "    search_text=\"What is Contoso\",\n",
-    "    vector_queries=[VectorizableTextQuery(text=\"What is Contoso\", k_nearest_neighbors=50, fields=\"text_vector\")],\n",
-    "    top=5,\n",
-    "    select=[\"title\", \"chunk\"],\n",
-    "    query_type=\"semantic\",\n",
-    "    semantic_configuration_name=\"ragtime2-semantic-configuration\",\n",
-    "    query_rewrites=\"generative\",\n",
-    "    query_language=\"en\"\n",
-    ")\n",
+    "# results = search_client.search(\n",
+    "#     search_text=\"What is Contoso\",\n",
+    "#     vector_queries=[VectorizableTextQuery(text=\"What is Contoso\", k_nearest_neighbors=50, fields=\"text_vector\")],\n",
+    "#     top=5,\n",
+    "#     select=[\"title\", \"chunk\"],\n",
+    "#     query_type=\"semantic\",\n",
+    "#     semantic_configuration_name=\"ragtime2-semantic-configuration\",\n",
+    "#     query_rewrites=\"generative\",\n",
+    "#     query_language=\"en\"\n",
+    "# )\n",
     "\n",
-    "display_results(results)"
+    "# display_results(results)"
    ]
   },
   {
