--- a/05-Optimizing-Retrieval/05-Optimizing-Retrieval.ipynb
+++ b/05-Optimizing-Retrieval/05-Optimizing-Retrieval.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Semantic configuration name should be the name of your index + \"-semantic-configuration\" --> if you run into an error, verify the name of your semantic configuration\n",
+    "#Semantic configuration name should be the name of your index + \"-semantic-configuration\" --> if you run into an error, verify the name of your semantic configuration and whether semantic ranking is enabled on your index\n",
     "semantic_configuration_name=index_name + \"-semantic-configuration\"\n",
     "\n",
     "results = search_client.search(\n",
@@ -200,7 +200,7 @@
     "Use semantic ranking and query rewriting for improved relevance.\n",
     "\n",
     "**Note**: Currently, query rewriting is in public preview stage and only available in a search service, Basic tier or higher, in **North Europe** or **Southeast Asia**.\n",
-    "More Info [here](https://learn.microsoft.com/en-us/azure/search/semantic-how-to-query-rewrite)!"
+    "Check out more info on [query re-writing](https://learn.microsoft.com/en-us/azure/search/semantic-how-to-query-rewrite) and on [regional availability of features](https://learn.microsoft.com/en-us/azure/search/search-region-support#europe)"
    ]
   },
   {
